unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/iCLightning__iContact_Sent_Message__c.object-meta.xml
<CustomObject>
    <description>A record of a message that was sent via iContact. Used for tracking statistics.</description>
    <label>iContact Email Message - Lightning</label>
    <nameField>
        <label>Message Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Email Messages - Lightning</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>