unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Bounce_Rate__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Bounce_Rate__c</fullName>
    <description>Bounces divided by released.</description>
    <formula>if(iCLightning__Released__c &gt; 0, iCLightning__Bounces__c / iCLightning__Released__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The bounce rate is the ratio of the number of bounces per recipients</inlineHelpText>
    <label>Bounce Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>