unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Bounces__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Bounces__c</fullName>
    <description>Number of message bounces as reported from iContact.</description>
    <inlineHelpText>Bounces reports the number of times the message was not successfully delivered to an email address, which is usually due to a full email inbox, a down email server, or an invalid email address.</inlineHelpText>
    <label>Bounces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>