unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Campaign__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Campaign__c</fullName>
    <description>The SFDC campaign this message was sent from.</description>
    <inlineHelpText>The SFDC campaign this message was sent from.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>iContact Email Messages - Lightning</relationshipLabel>
    <relationshipName>iContact_Sent_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>