unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Campaign_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Campaign_Member_Count__c</fullName>
    <label>Campaign Member Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>