unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Click_To_Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Click_To_Open_Rate__c</fullName>
    <formula>IF( iCLightning__Unique_Opens__c != 0 &amp;&amp; iCLightning__Unique_Clicks__c != 0, iCLightning__Unique_Clicks__c / iCLightning__Unique_Opens__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The click to open rate is the ratio of unique clicks per unique opens.</inlineHelpText>
    <label>Click to Open Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>