unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Complaints__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Complaints__c</fullName>
    <description>Number of message complaints as reported from iContact.</description>
    <inlineHelpText>The number of complaints refers to the number of people who reported your message as spam in their email client.</inlineHelpText>
    <label>Complaints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>