unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Email_Template__c</fullName>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>