unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Email_Template_ID__c</fullName>
    <description>The Id of the template that was used for the iContact Send.</description>
    <label>Email Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>