unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>