unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Forward_Rate__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Forward_Rate__c</fullName>
    <description>Forwards divided by released.</description>
    <formula>if(iCLightning__Released__c &gt; 0, iCLightning__Forwards__c / iCLightning__Released__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The forward rate is the ratio of forwards per number of recipients.</inlineHelpText>
    <label>Forward Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>