unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Forwards__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Forwards__c</fullName>
    <description>Number of message forwards as reported from iContact.</description>
    <inlineHelpText>This is the number of times the "Forward to a friend" link was clicked in the iContact message you sent.</inlineHelpText>
    <label>Forwards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>