unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__iContact_Asynchronous_Send_Id__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__iContact_Asynchronous_Send_Id__c</fullName>
    <label>iContact Asynchronous Send Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>