unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__iContact_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__iContact_Campaign_ID__c</fullName>
    <description>The ID of the iContact campaign that this message was sent for.</description>
    <inlineHelpText>The ID of the iContact campaign that this message was sent for.</inlineHelpText>
    <label>iContact Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>