unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__iContact_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__iContact_Message_ID__c</fullName>
    <description>The ID of the iContact Message that was created and sent out.</description>
    <inlineHelpText>The ID of the iContact Message that was created and sent out.</inlineHelpText>
    <label>iContact Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>