unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__iContact_Send_ID__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__iContact_Send_ID__c</fullName>
    <description>The ID of the iContact Send that was created.</description>
    <inlineHelpText>The ID of the iContact Send that was created.</inlineHelpText>
    <label>iContact Send ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>