unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Open_Rate__c</fullName>
    <description>Unique opens divided by released.</description>
    <formula>if(iCLightning__Released__c &gt; 0, iCLightning__Unique_Opens__c / iCLightning__Released__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The open rate is the ratio of individual opens per recipients, which indicates the percentage of people who are viewing your message.</inlineHelpText>
    <label>Open Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>