unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Opens__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Opens__c</fullName>
    <description>Total number of message opens as reported from iContact.</description>
    <inlineHelpText>Total opens reports the total number of times that any recipient has opened your message. For instance, if 5 people open the message once and one more person opens the message 5 times, the total opens would be 10.</inlineHelpText>
    <label>Total Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>