unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Released_Time__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Released_Time__c</fullName>
    <description>The time the send request was completed.</description>
    <inlineHelpText>The time the send request was completed.</inlineHelpText>
    <label>Released Time</label>
    <type>DateTime</type>
</CustomField>