unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Scheduled_Time__c</fullName>
    <description>The time the send request was started for processing.</description>
    <inlineHelpText>The time the send request was started for processing.</inlineHelpText>
    <label>Scheduled Time</label>
    <type>DateTime</type>
</CustomField>