unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Spam_Check_Details__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Spam_Check_Details__c</fullName>
    <label>Spam Check Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>