unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Spam_Check_Score__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Spam_Check_Score__c</fullName>
    <label>Spam Check Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>