unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Targeted__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Targeted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this message was sent using the "Targeted Send" feature.</description>
    <inlineHelpText>If checked, this message was sent using the "Targeted Send" feature.</inlineHelpText>
    <label>Targeted</label>
    <type>Checkbox</type>
</CustomField>