unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Targeted_Join_Date1__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Targeted_Join_Date1__c</fullName>
    <description>Date used for targeted send process.</description>
    <label>Targeted Join Date 1</label>
    <type>Date</type>
</CustomField>