unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Targeted_Join_Date2__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Targeted_Join_Date2__c</fullName>
    <description>Date used during targeted send process.</description>
    <label>Targeted Join Date 2</label>
    <type>Date</type>
</CustomField>