unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Targeted_Option__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Targeted_Option__c</fullName>
    <label>Targeted Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>