unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Unique_Opens__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Unique_Opens__c</fullName>
    <description>Unique opens reports the number of recipients that opened your message.</description>
    <inlineHelpText>Unique opens reports the number of recipients that opened your message.</inlineHelpText>
    <label>Unique Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>