unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__Unsubscribe_Rate__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Unsubscribe_Rate__c</fullName>
    <description>Unsubscribes divided by released.</description>
    <formula>if(iCLightning__Released__c &gt; 0, iCLightning__Unsubscribed__c / iCLightning__Released__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The unsubscribe rate is the ratio of the number of unsubscribed campaign members per recipients sent the message.</inlineHelpText>
    <label>Unsubscribe Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>