unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/fields/iCLightning__update_statistics_date__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__update_statistics_date__c</fullName>
    <description>Most recent time that refreshing statistics finished for this message.</description>
    <inlineHelpText>Most recent time that refreshing statistics finished for this message.</inlineHelpText>
    <label>Last Refresh Statistics Time</label>
    <type>DateTime</type>
</CustomField>