unpackaged/main/default/objects/iCLightning__iContact_Sent_Message__c/listViews/iCLightning__All.listView-meta.xml
<ListView>
    <fullName>iCLightning__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>